samples/_failures_safe/1761703336_4cd55f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02377602.c: In function ‘main’:
./samples/SAFE/__tmp_02377602.c:188:12: error: missing terminating " character
  188 |     printf("Total steps: %u\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_02377602.c:188:5: error: expected expression at end of input
  188 |     printf("Total steps: %u\n
      |     ^~~~~~
./samples/SAFE/__tmp_02377602.c:188:5: error: expected declaration or statement at end of input
